Fix elements not showing in iOS

--- a/scss/toolkit/components/mask.scss
+++ b/scss/toolkit/components/mask.scss
@@ -34,5 +34,5 @@
 
     // Fixes issues where mask does not display in iOS
     // Kind of hacky? Other solutions?
-    transform: translate3d(0, 0, 0);
+    -webkit-backface-visibility: hidden;
 }
